- plugins are disabled by default - plugins are Runtime by default - added log category

--- a/TemplatePlugin/TemplatePlugin.uplugin
+++ b/TemplatePlugin/TemplatePlugin.uplugin
@@ -9,13 +9,13 @@
 	"EngineVersion" : "4.2.0",
 	"Description" : "This plugin will do something, some day.",
 	"Category" : "Developer",
-	"EnabledByDefault" : true,
+	"EnabledByDefault" : false,
 	
 	"Modules" :
 	[
 		{
 			"Name" : "TemplatePlugin",
-			"Type" : "Developer"
+			"Type" : "Runtime"
 		}
 	]
 }
